[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zray"
git add .; git commit -m "remove description about version"description = "A ray tracing library for optical systems in axsymmetric vessels"
authors = [
    { name = "UedaKenji", email = "ueda.kenji@nifs.ac.jp" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/UedaKenji/ZRay"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "zray.__version__"}
